# kg-cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: README.md  cli.py  download.yaml  merge.yaml  pyproject.toml  run.py  tox.ini
{{cookiecutter.project_name}}/templates/: README.build  README.toplevel
{{cookiecutter.project_name}}/{{cookiecutter.__project_slug}}/: __init__.py  download.py  download.yaml  query.py  run.py  transform.py
{{cookiecutter.project_name}}/{{cookiecutter.__project_slug}}/merge_utils/: __init__.py  merge_kg.py
{{cookiecutter.project_name}}/{{cookiecutter.__project_slug}}/transform_utils/: __init__.py  transform.py
{{cookiecutter.project_name}}/{{cookiecutter.__project_slug}}/transform_utils/atc/: atc-classes.py  atc-classes.yaml  atc.py
{{cookiecutter.project_name}}/{{cookiecutter.__project_slug}}/transform_utils/example_transform/: __init__.py  example_transform.py
{{cookiecutter.project_name}}/{{cookiecutter.__project_slug}}/transform_utils/ontology/: ontology_transform.py
{{cookiecutter.project_name}}/{{cookiecutter.__project_slug}}/utils/: __init__.py  robot_utils.py
{{cookiecutter.project_name}}/{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/: download.py
{{cookiecutter.project_name}}/{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/transform_utils/example_transform/: example_transform.py
