[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_name}}"
authors = ["{{cookiecutter.__author}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{cookiecutter.min_python_version}}"
click = "*"
importlib-metadata = "^8.2.0"
kghub-downloader = "*"
kgx = "*"
koza = "*"
biolink-model = "*"
requests-cache = "*"

[tool.poetry.group.dev.dependencies]
pytest = {version = ">=8.3.1"}
tox = {version = ">=4.16.0"}
pre-commit = {version = ">=3.3.3"}
parameterized = "^0.9.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = {version = "7.4.7"}
sphinx-rtd-theme = {version = ">=2.0.0"}
sphinx-autodoc-typehints = {version = ">=2.2.3"}
sphinx-click = {version = ">=6.0.0"}
myst-parser = {version = ">=3.0.1"}

[tool.poetry.group.chatbot.dependencies]
kg-chat = {version = ">=0.1.2"}

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]
chatbot = [
    "kg-chat"
]


[tool.poetry.scripts]
kg = '{{cookiecutter.__project_slug}}.run:main'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.ruff]
extend-ignore = [
    "D211",  # `no-blank-line-before-class`
    "D212",  # `multi-line-summary-first-line`
    ]
line-length = 120

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Select or ignore from https://beta.ruff.rs/docs/rules/
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort 
    "S",  # flake8-bandit
    "W",  # Warning
]

unfixable = []
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml"
count = ""
quiet-level = 3
# ignore-words-list = ""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
